// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconOutline props exists 1`] = `
<
  style={
    Array [
      Object {
        "color": "red",
        "fontFamily": "antoutline",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  
</>
`;

exports[`IconOutline should create Icon element. 1`] = `
<
  style={
    Array [
      Object {
        "color": "black",
        "fontFamily": "antoutline",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  
</>
`;

exports[`IconOutline should create outlineGlyphMap 1`] = `
Object {
  "account-book": 57345,
  "aim": 57346,
  "alert": 57347,
  "alibaba": 57348,
  "align-center": 57349,
  "align-left": 57350,
  "align-right": 57351,
  "alipay": 57353,
  "alipay-circle": 57352,
  "aliwangwang": 57354,
  "aliyun": 57355,
  "amazon": 57356,
  "android": 57357,
  "ant-cloud": 57358,
  "ant-design": 57359,
  "apartment": 57360,
  "api": 57361,
  "apple": 57362,
  "appstore": 57364,
  "appstore-add": 57363,
  "area-chart": 57365,
  "arrow-down": 57366,
  "arrow-left": 57367,
  "arrow-right": 57368,
  "arrow-up": 57369,
  "arrows-alt": 57370,
  "audio": 57372,
  "audio-muted": 57371,
  "audit": 57373,
  "backward": 57374,
  "bank": 57375,
  "bar-chart": 57376,
  "barcode": 57377,
  "bars": 57378,
  "behance": 57380,
  "behance-square": 57379,
  "bell": 57381,
  "bg-colors": 57382,
  "block": 57383,
  "bold": 57384,
  "book": 57385,
  "border": 57394,
  "border-bottom": 57386,
  "border-horizontal": 57387,
  "border-inner": 57388,
  "border-left": 57389,
  "border-outer": 57390,
  "border-right": 57391,
  "border-top": 57392,
  "border-verticle": 57393,
  "borderless-table": 57395,
  "box-plot": 57396,
  "branches": 57397,
  "bug": 57398,
  "build": 57399,
  "bulb": 57400,
  "calculator": 57401,
  "calendar": 57402,
  "camera": 57403,
  "car": 57404,
  "caret-down": 57405,
  "caret-left": 57406,
  "caret-right": 57407,
  "caret-up": 57408,
  "carry-out": 57409,
  "check": 57412,
  "check-circle": 57410,
  "check-square": 57411,
  "chrome": 57413,
  "ci": 57415,
  "ci-circle": 57414,
  "clear": 57416,
  "clock-circle": 57417,
  "close": 57420,
  "close-circle": 57418,
  "close-square": 57419,
  "cloud": 57425,
  "cloud-download": 57421,
  "cloud-server": 57422,
  "cloud-sync": 57423,
  "cloud-upload": 57424,
  "cluster": 57426,
  "code": 57428,
  "code-sandbox": 57427,
  "codepen": 57430,
  "codepen-circle": 57429,
  "coffee": 57431,
  "column-height": 57432,
  "column-width": 57433,
  "comment": 57434,
  "compass": 57435,
  "compress": 57436,
  "console-sql": 57437,
  "contacts": 57438,
  "container": 57439,
  "control": 57440,
  "copy": 57441,
  "copyright": 57443,
  "copyright-circle": 57442,
  "credit-card": 57444,
  "crown": 57445,
  "customer-service": 57446,
  "dash": 57447,
  "dashboard": 57448,
  "database": 57449,
  "delete": 57452,
  "delete-column": 57450,
  "delete-row": 57451,
  "delivered-procedure": 57453,
  "deployment-unit": 57454,
  "desktop": 57455,
  "diff": 57456,
  "dingding": 57457,
  "dingtalk": 57458,
  "disconnect": 57459,
  "dislike": 57460,
  "dollar": 57462,
  "dollar-circle": 57461,
  "dot-chart": 57463,
  "double-left": 57464,
  "double-right": 57465,
  "down": 57468,
  "down-circle": 57466,
  "down-square": 57467,
  "download": 57469,
  "drag": 57470,
  "dribbble": 57472,
  "dribbble-square": 57471,
  "dropbox": 57473,
  "edit": 57474,
  "ellipsis": 57475,
  "enter": 57476,
  "environment": 57477,
  "euro": 57479,
  "euro-circle": 57478,
  "exception": 57480,
  "exclamation": 57482,
  "exclamation-circle": 57481,
  "expand": 57484,
  "expand-alt": 57483,
  "experiment": 57485,
  "export": 57486,
  "eye": 57488,
  "eye-invisible": 57487,
  "facebook": 57489,
  "fall": 57490,
  "fast-backward": 57491,
  "fast-forward": 57492,
  "field-binary": 57493,
  "field-number": 57494,
  "field-string": 57495,
  "field-time": 57496,
  "file": 57514,
  "file-add": 57497,
  "file-done": 57498,
  "file-excel": 57499,
  "file-exclamation": 57500,
  "file-gif": 57501,
  "file-image": 57502,
  "file-jpg": 57503,
  "file-markdown": 57504,
  "file-pdf": 57505,
  "file-ppt": 57506,
  "file-protect": 57507,
  "file-search": 57508,
  "file-sync": 57509,
  "file-text": 57510,
  "file-unknown": 57511,
  "file-word": 57512,
  "file-zip": 57513,
  "filter": 57515,
  "fire": 57516,
  "flag": 57517,
  "folder": 57521,
  "folder-add": 57518,
  "folder-open": 57519,
  "folder-view": 57520,
  "font-colors": 57522,
  "font-size": 57523,
  "fork": 57524,
  "form": 57525,
  "format-painter": 57526,
  "forward": 57527,
  "frown": 57528,
  "fullscreen": 57530,
  "fullscreen-exit": 57529,
  "function": 57531,
  "fund": 57534,
  "fund-projection-screen": 57532,
  "fund-view": 57533,
  "funnel-plot": 57535,
  "gateway": 57536,
  "gif": 57537,
  "gift": 57538,
  "github": 57539,
  "gitlab": 57540,
  "global": 57541,
  "gold": 57542,
  "google": 57544,
  "google-plus": 57543,
  "group": 57545,
  "hdd": 57546,
  "heart": 57547,
  "heat-map": 57548,
  "highlight": 57549,
  "history": 57550,
  "home": 57551,
  "hourglass": 57552,
  "html5": 57553,
  "idcard": 57554,
  "ie": 57555,
  "import": 57556,
  "inbox": 57557,
  "info": 57559,
  "info-circle": 57558,
  "insert-row-above": 57560,
  "insert-row-below": 57561,
  "insert-row-left": 57562,
  "insert-row-right": 57563,
  "instagram": 57564,
  "insurance": 57565,
  "interaction": 57566,
  "issues-close": 57567,
  "italic": 57568,
  "key": 57569,
  "laptop": 57570,
  "layout": 57571,
  "left": 57574,
  "left-circle": 57572,
  "left-square": 57573,
  "like": 57575,
  "line": 57578,
  "line-chart": 57576,
  "line-height": 57577,
  "link": 57579,
  "linkedin": 57580,
  "loading": 57582,
  "loading-3-quarters": 57581,
  "lock": 57583,
  "login": 57584,
  "logout": 57585,
  "mac-command": 57586,
  "mail": 57587,
  "man": 57588,
  "medicine-box": 57589,
  "medium": 57591,
  "medium-workmark": 57590,
  "meh": 57592,
  "menu": 57595,
  "menu-fold": 57593,
  "menu-unfold": 57594,
  "merge-cells": 57596,
  "message": 57597,
  "minus": 57600,
  "minus-circle": 57598,
  "minus-square": 57599,
  "mobile": 57601,
  "money-collect": 57602,
  "monitor": 57603,
  "more": 57604,
  "node-collapse": 57605,
  "node-expand": 57606,
  "node-index": 57607,
  "notification": 57608,
  "number": 57609,
  "one-to-one": 57610,
  "ordered-list": 57611,
  "paper-clip": 57612,
  "partition": 57613,
  "pause": 57615,
  "pause-circle": 57614,
  "pay-circle": 57616,
  "percentage": 57617,
  "phone": 57618,
  "pic-center": 57619,
  "pic-left": 57620,
  "pic-right": 57621,
  "picture": 57622,
  "pie-chart": 57623,
  "play-circle": 57624,
  "play-square": 57625,
  "plus": 57628,
  "plus-circle": 57626,
  "plus-square": 57627,
  "pound": 57630,
  "pound-circle": 57629,
  "poweroff": 57631,
  "printer": 57632,
  "profile": 57633,
  "project": 57634,
  "property-safety": 57635,
  "pull-request": 57636,
  "pushpin": 57637,
  "qq": 57638,
  "qrcode": 57639,
  "question": 57641,
  "question-circle": 57640,
  "radar-chart": 57642,
  "radius-bottomleft": 57643,
  "radius-bottomright": 57644,
  "radius-setting": 57645,
  "radius-upleft": 57646,
  "radius-upright": 57647,
  "read": 57648,
  "reconciliation": 57649,
  "red-envelope": 57650,
  "reddit": 57651,
  "redo": 57652,
  "reload": 57653,
  "rest": 57654,
  "retweet": 57655,
  "right": 57658,
  "right-circle": 57656,
  "right-square": 57657,
  "rise": 57659,
  "robot": 57660,
  "rocket": 57661,
  "rollback": 57662,
  "rotate-left": 57663,
  "rotate-right": 57664,
  "safety": 57666,
  "safety-certificate": 57665,
  "save": 57667,
  "scan": 57668,
  "schedule": 57669,
  "scissor": 57670,
  "search": 57671,
  "security-scan": 57672,
  "select": 57673,
  "send": 57674,
  "setting": 57675,
  "shake": 57676,
  "share-alt": 57677,
  "shop": 57678,
  "shopping": 57680,
  "shopping-cart": 57679,
  "shrink": 57681,
  "sisternode": 57682,
  "sketch": 57683,
  "skin": 57684,
  "skype": 57685,
  "slack": 57687,
  "slack-square": 57686,
  "sliders": 57688,
  "small-dash": 57689,
  "smile": 57690,
  "snippets": 57691,
  "solution": 57692,
  "sort-ascending": 57693,
  "sort-descending": 57694,
  "sound": 57695,
  "split-cells": 57696,
  "star": 57697,
  "step-backward": 57698,
  "step-forward": 57699,
  "stock": 57700,
  "stop": 57701,
  "strikethrough": 57702,
  "subnode": 57703,
  "swap": 57706,
  "swap-left": 57704,
  "swap-right": 57705,
  "switcher": 57707,
  "sync": 57708,
  "table": 57709,
  "tablet": 57710,
  "tag": 57711,
  "tags": 57712,
  "taobao": 57714,
  "taobao-circle": 57713,
  "team": 57715,
  "thunderbolt": 57716,
  "to-top": 57717,
  "tool": 57718,
  "trademark": 57720,
  "trademark-circle": 57719,
  "transaction": 57721,
  "translation": 57722,
  "trophy": 57723,
  "twitter": 57724,
  "underline": 57725,
  "undo": 57726,
  "ungroup": 57727,
  "unlock": 57728,
  "unordered-list": 57729,
  "up": 57732,
  "up-circle": 57730,
  "up-square": 57731,
  "upload": 57733,
  "usb": 57734,
  "user": 57738,
  "user-add": 57735,
  "user-delete": 57736,
  "user-switch": 57737,
  "usergroup-add": 57739,
  "usergroup-delete": 57740,
  "verified": 57741,
  "vertical-align-bottom": 57742,
  "vertical-align-middle": 57743,
  "vertical-align-top": 57744,
  "vertical-left": 57745,
  "vertical-right": 57746,
  "video-camera": 57748,
  "video-camera-add": 57747,
  "wallet": 57749,
  "warning": 57750,
  "wechat": 57751,
  "weibo": 57754,
  "weibo-circle": 57752,
  "weibo-square": 57753,
  "whats-app": 57755,
  "wifi": 57756,
  "windows": 57757,
  "woman": 57758,
  "yahoo": 57759,
  "youtube": 57760,
  "yuque": 57761,
  "zhihu": 57762,
  "zoom-in": 57763,
  "zoom-out": 57764,
}
`;
